Change api exception to ProblemDetail and update enterprises REST logic