@@ -1,14 +1,15 @@
 package com.theusick.controller;
 
 import com.theusick.api.exception.NotFoundApiException;
-import com.theusick.controller.dto.VehicleDTO;
+import com.theusick.controller.dto.enterprise.EnterpriseBaseDTO;
+import com.theusick.controller.dto.vehicle.EnterpriseVehicleDTO;
 import com.theusick.service.DriverService;
 import com.theusick.service.EnterpriseService;
 import com.theusick.service.VehicleService;
 import com.theusick.service.exception.NoSuchException;
+import com.theusick.service.mapper.EnterpriseMapper;
 import com.theusick.service.mapper.VehicleMapper;
 import com.theusick.service.model.DriverModel;
-import com.theusick.service.model.EnterpriseModel;
 import io.swagger.v3.oas.annotations.tags.Tag;
 import lombok.RequiredArgsConstructor;
 import org.springframework.web.bind.annotation.GetMapping;
@@ -17,7 +18,6 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @Tag(name = "Enterprise")
@@ -26,22 +26,26 @@ import java.util.stream.Collectors;
 public class EnterpriseApiController {
 
     private final EnterpriseService enterpriseService;
+    private final EnterpriseMapper enterpriseMapper;
+
     private final DriverService driverService;
 
     private final VehicleService vehicleService;
     private final VehicleMapper vehicleMapper;
 
     @GetMapping(produces = {"application/json"})
-    public List<EnterpriseModel> getEnterprises() {
-        return enterpriseService.getEnterprises();
+    public List<EnterpriseBaseDTO> getEnterprises() {
+        return enterpriseService.getEnterprises().stream()
+            .map(enterpriseMapper::enterpriseBaseDTOFromModel)
+            .toList();
     }
 
     @GetMapping(value = "/{enterpriseId}/vehicles", produces = {"application/json"})
-    public List<VehicleDTO> getEnterpriseVehicles(@PathVariable Long enterpriseId) {
+    public List<EnterpriseVehicleDTO> getEnterpriseVehicles(@PathVariable Long enterpriseId) {
         try {
             return vehicleService.getEnterpriseVehicles(enterpriseId).stream()
-                .map(vehicleMapper::vehicleDTOFromModel)
-                .collect(Collectors.toList());
+                .map(vehicleMapper::enterpriseVehicleDTOFromModel)
+                .toList();
         } catch (NoSuchException exception) {
             throw new NotFoundApiException(exception.getMessage());
         }
